--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ http://www.tooplate.com/view/2080-minimax
 				<li><a href="#home" class="smoothScroll">HOME</a></li>
 				<li><a href="#service" class="smoothScroll">SERVICE</a></li>
 				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-				<li><a href="#service" class="smoothScroll">TRACK SHIPMENT</a></li>
+				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
 		</div>
 	</div>
@@ -162,7 +162,7 @@ http://www.tooplate.com/view/2080-minimax
 </div>
 
 <!-- team section -->
-<div id="team">
+<div id="uniqueness">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
