--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ http://www.tooplate.com/view/2080-minimax
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#home" class="smoothScroll">HOME</a></li>
-				<li><a href="#service" class="smoothScroll">SERVICE</a></li>
-				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
+				<li><a href="index.html#home" class="smoothScroll">HOME</a></li>
+				<li><a href="index.html#service" class="smoothScroll">SERVICE</a></li>
+				<li><a href="index.html#about" class="smoothScroll">ABOUT</a></li>
+				<li><a href="index.html#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
 		</div>
 	</div>
